@@ -2,9 +2,11 @@ package org.odk.tooth_office.Services.Implementations;
 
 import lombok.RequiredArgsConstructor;
 import org.odk.tooth_office.DTO.SecretaireDTO;
+import org.odk.tooth_office.DTO.SecretaireResponseDTO;
 import org.odk.tooth_office.Entity.Cabinet;
 import org.odk.tooth_office.Entity.ChefCabinet;
 import org.odk.tooth_office.Entity.Secretaire;
+import org.odk.tooth_office.Mapper.SecretaireMapper;
 import org.odk.tooth_office.Repository.CabinetRepository;
 import org.odk.tooth_office.Repository.ChefCabinetRepository;
 import org.odk.tooth_office.Repository.SecretaireRepository;
@@ -14,7 +16,8 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
@@ -26,27 +29,32 @@ public class SecretaireServiceImplementation implements SecretaireService {
     private final PasswordService passwordService;
 
     @Override
-    public List<SecretaireDTO> getAll() {
-        return secretaireRepository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+    public List<SecretaireResponseDTO> getAll() {
+        return secretaireRepository.findAll().stream()
+                .map(SecretaireMapper::toResponseDTO)
+                .toList();
     }
 
     @Override
-    public Optional<SecretaireDTO> getById(Long id) {
-        return secretaireRepository.findById(id).map(this::toDto);
+    public Optional<SecretaireResponseDTO> getById(Long id) {
+        return secretaireRepository.findById(id)
+                .map(SecretaireMapper::toResponseDTO);
     }
 
     @Override
-    public SecretaireDTO create(SecretaireDTO dto) {
-        Secretaire saved = secretaireRepository.save(toEntity(dto, new Secretaire()));
-        return toDto(saved);
+    public SecretaireResponseDTO create(SecretaireDTO dto) {
+        Secretaire secretaire = toEntity(dto, new Secretaire());
+        Secretaire saved = secretaireRepository.save(secretaire);
+        return SecretaireMapper.toResponseDTO(saved);
     }
 
     @Override
-    public Optional<SecretaireDTO> update(Long id, SecretaireDTO dto) {
+    public Optional<SecretaireResponseDTO> update(Long id, SecretaireDTO dto) {
         return secretaireRepository.findById(id).map(existing -> {
             Secretaire updated = toEntity(dto, existing);
             updated.setId_utilisateur(id);
-            return toDto(secretaireRepository.save(updated));
+            Secretaire saved = secretaireRepository.save(updated);
+            return SecretaireMapper.toResponseDTO(saved);
         });
     }
 
@@ -83,8 +91,8 @@ public class SecretaireServiceImplementation implements SecretaireService {
         secretaire.setNom(dto.getNom());
         secretaire.setPrenom(dto.getPrenom());
         secretaire.setEmail(dto.getEmail());
-        if (dto.getMpd() != null && !dto.getMpd().isBlank()) {
-            secretaire.setMpd(passwordService.encodeIfNeeded(dto.getMpd()));
+        if (dto.getMdp() != null && !dto.getMdp().isBlank()) {
+            secretaire.setMdp(passwordService.encodeIfNeeded(dto.getMdp()));
         }
         secretaire.setAdresse(dto.getAdresse());
         secretaire.setRole(dto.getRole());
